@@ -5,6 +5,10 @@
  */
 import { render } from '@testing-library/react';
 import { updateQueryString } from '@woocommerce/navigation';
+import { downloadCSVFile } from '@woocommerce/csv-export';
+import { dateI18n } from '@wordpress/date';
+import moment from 'moment';
+import os from 'os';
 
 /**
  * Internal dependencies
@@ -16,6 +20,15 @@ jest.mock( 'wcpay/data', () => ( {
 	useDeposits: jest.fn(),
 	useDepositsSummary: jest.fn(),
 } ) );
+
+jest.mock( '@woocommerce/csv-export', () => {
+	const actualModule = jest.requireActual( '@woocommerce/csv-export' );
+
+	return {
+		...actualModule,
+		downloadCSVFile: jest.fn(),
+	};
+} );
 
 const mockDeposits = [
 	{
@@ -122,4 +135,125 @@ describe( 'Deposits list', () => {
 
 		expect( tableSummary ).toHaveLength( 1 );
 	} );
+
+	describe( 'Download button', () => {
+		test( 'renders when there are one or more deposits', () => {
+			useDeposits.mockReturnValue( {
+				deposits: mockDeposits,
+				isLoading: false,
+			} );
+
+			const { queryByRole } = render( <DepositsList /> );
+			const button = queryByRole( 'button', { name: 'Download' } );
+
+			expect( button ).not.toBeNull();
+		} );
+
+		test( 'does not render when there are no deposits', () => {
+			useDeposits.mockReturnValue( {
+				deposits: [],
+				isLoading: false,
+			} );
+
+			const { queryByRole } = render( <DepositsList /> );
+			const button = queryByRole( 'button', { name: 'Download' } );
+
+			expect( button ).toBeNull();
+		} );
+	} );
+
+	describe( 'CSV download', () => {
+		beforeEach( () => {
+			useDeposits.mockReturnValue( {
+				deposits: mockDeposits,
+				depositsCount: 2,
+				isLoading: false,
+			} );
+			useDepositsSummary.mockReturnValue( {
+				depositsSummary: {
+					count: 2,
+					total: 5000,
+				},
+				isLoading: false,
+			} );
+		} );
+
+		afterEach( () => {
+			jest.resetAllMocks();
+		} );
+
+		afterAll( () => {
+			jest.restoreAllMocks();
+		} );
+
+		test( 'should render expected columns in CSV when the download button is clicked', () => {
+			const { getByRole } = render( <DepositsList /> );
+			getByRole( 'button', { name: 'Download' } ).click();
+
+			const expected = [
+				'"Deposit Id"',
+				'Date',
+				'Type',
+				'Amount',
+				'Status',
+				'"Bank account"',
+			];
+
+			const csvContent = downloadCSVFile.mock.calls[ 0 ][ 1 ];
+			const csvHeaderRow = csvContent.split( os.EOL )[ 0 ].split( ',' );
+			expect( csvHeaderRow ).toEqual( expected );
+		} );
+
+		test( 'should match the visible rows', () => {
+			const { getByRole, getAllByRole } = render( <DepositsList /> );
+			getByRole( 'button', { name: 'Download' } ).click();
+
+			const csvContent = downloadCSVFile.mock.calls[ 0 ][ 1 ];
+			const csvRows = csvContent.split( os.EOL );
+			const displayRows = getAllByRole( 'row' );
+
+			expect( csvRows.length ).toEqual( displayRows.length );
+
+			const csvFirstDeposit = csvRows[ 1 ].split( ',' );
+			const displayFirstDeposit = Array.from(
+				displayRows[ 1 ].querySelectorAll( 'td' )
+			).map( ( td ) => td.textContent );
+
+			// Note:
+			//
+			// 1. CSV and display indexes are off by 1 because the first field in CSV is deposit id,
+			//    which is missing in display.
+			//
+			// 2. The indexOf check in amount's expect is because the amount in CSV may not contain
+			//    trailing zeros as in the display amount.
+			//
+			expect( formatDate( csvFirstDeposit[ 1 ] ) ).toBe(
+				displayFirstDeposit[ 0 ]
+			); // date
+			expect( csvFirstDeposit[ 2 ] ).toBe(
+				displayFirstDeposit[ 1 ].toLowerCase()
+			); // type
+			expect(
+				getUnformattedAmount( displayFirstDeposit[ 2 ] ).indexOf(
+					csvFirstDeposit[ 3 ]
+				)
+			).not.toBe( -1 ); // amount
+			expect( csvFirstDeposit[ 4 ] ).toBe(
+				displayFirstDeposit[ 3 ].toLowerCase()
+			); // status
+			expect( csvFirstDeposit[ 5 ] ).toBe(
+				`"${ displayFirstDeposit[ 4 ] }"`
+			); // bank account
+		} );
+	} );
 } );
+
+function getUnformattedAmount( formattedAmount ) {
+	let amount = formattedAmount.replace( /[^0-9,.' ]/g, '' ).trim();
+	amount = amount.replace( ',', '.' ); // Euro fix
+	return amount;
+}
+
+function formatDate( date ) {
+	return dateI18n( 'M j, Y', moment.utc( date ).toISOString(), true );
+}
