@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 3.0.0 - 2021-xx-xx =
+* Add - Download deposits report in CSV.
 
 = 2.9.0 - 2021-08-25 =
 * Add - Split discount line in timeline into variable fee and fixed fee.
